--- a/protocols.ini
+++ b/protocols.ini
@@ -94,11 +94,21 @@ CmdParms=OBC=0
 CmdTranslator=Translator(lsb)
 #                               Hex command is one byte long
 DefaultCmd=00
-Notes=
+Notes=We have (rather arbitrarily) assigned the name "Sub Device" to the portion of\n\
+      Aiwa device information that CAN'T be varied between functions in the combo\n\
+      version of this protocol.  The decoder and the other Aiwa protocols (in\n\
+      RemoteMaster) use this same terminology (the non Combo Aiwa protocol in KM\n\
+      doesn't).\n\
+      \n\
+      If the upgrade you make with this protocol basically works, but holding\n\
+      a key down in that upgrade does just the same as pressing it momentarily\n\
+      while holding a key down in the orriginal remote does more than just\n\
+      pressing it momentarily, you may need the less common Aiwa2 protocol\n\
+      instead of this protocol.
 #                               Protocol upgrade code for S3C80 processor
 Code.S3C80=3D 91 21 8B 13 E6 44 08 08 01 12 03 3C 01 12 01 \
-           0B D2 37 11 7E 08 C3 05 08 04 37 01 0C F6 01 46 \
-           E6 28 C0 46 29 01 8D 01 46 46 29 01 8D 01 46
+           0B D2 37 11 7E 08 C3 05 F6 01 46 E6 28 C0 46 29 \
+           01 8D 01 46
 #                               Protocol upgrade code for 740 processor
 Code.740=0C 18 21 80 15 EF BE 01 16 08 08 03 1D 01 A5 69 \
          8C 55 06 D1 02 02 69 8C 06 D1 A5 5F 85 60 A5 5D \
@@ -106,6 +116,52 @@ Code.740=0C 18 21 80 15 EF BE 01 16 08 08 03 1D 01 A5 69 \
          0A 26 5F 26 5E CA D0 F8 85 61 3C 04 5C 0F 69 4C \
          00 FF
 ###############################
+
+[Aiwa]
+PID=00 5E
+VariantName=2
+DevParms=Device=0,Sub Device:5=0
+DeviceTranslator=Translator(lsb) \
+           Translator(lsb,1,5,8)
+FixedData=00 00
+CmdParms=OBC=0
+CmdTranslator=Translator(lsb)
+DefaultCmd=00
+Notes=We have (rather arbitrarily) assigned the name "Sub Device" to the portion of\n\
+      Aiwa device information that CAN'T be varied between functions in the combo\n\
+      version of this protocol.  The decoder and the other Aiwa protocols (in\n\
+      RemoteMaster) use this same terminology (the non Combo Aiwa protocol in KM\n\
+      doesn't).\n\
+      \n\
+      If the upgrade you make with this protocol basically works, but holding\n\
+      a key down in that upgrade does just the same as pressing it momentarily\n\
+      while holding a key down in the orriginal remote does more than just\n\
+      pressing it momentarily, you may need the less common Aiwa2 protocol\n\
+      instead of this protocol.
+Code.S3C80=3D 91 21 8B 13 E6 44 08 08 01 12 03 3C 01 12 01 \
+           0B D2 37 11 7E 08 C3 05 08 04 37 01 06 F6 01 46 \
+           E6 28 C0 46 29 01 8D 01 46
+
+[Aiwa2]
+PID=00 5E
+VariantName=2
+DevParms=Device=0,Sub Device:5=0
+DeviceTranslator=Translator(lsb) \
+           Translator(lsb,1,5,8)
+FixedData=00 01
+CmdParms=OBC=0
+CmdTranslator=Translator(lsb)
+DefaultCmd=00
+Notes=Variant of Aiwa that sends entire frames for repeat rather than special repeat\n\
+      frames.\n\
+      \n\
+      If you install device upgrades for both Aiwa and Aiwa2 protocols, do not\n\
+      install any protocol upgrade for Aiwa since the protocol (upgrade or built\n\
+      in) for Aiwa2 can handle Aiwa as well, but an upgrade protocol for Aiwa\n\
+      cannot handle Aiwa2.
+Code.S3C80=3D 91 21 8B 13 E6 44 08 08 01 12 03 3C 01 12 01 \
+           0B D2 37 11 7E 08 C3 05 08 04 37 01 06 F6 01 46 \
+           E6 28 C0 46 29 01 8D 01 46
 
 [Aiwa Combo]
 PID=00 9E
@@ -118,13 +174,13 @@ DefaultCmd=E1 FF
 CmdIndex=1
 Notes=We have (rather arbitrarily) assigned the name "Sub Device" to the portion of\n\
       Aiwa device information that CAN'T be varied between functions in this combo\n\
-      protocol.  The decoder and the other Aiwa protocol (in RemoteMaster) both use this\n\
+      protocol.  The decoder and the other Aiwa protocols (in RemoteMaster) use this\n\
       same terminology (the non Combo Aiwa protocol in KM doesn't).  Normally\n\
       this part of the device information is zero, so you normally put a 0 in the\n\
       Sub Device field on the Setup sheet (or leave it blank, which defaults to 0).\n\
       \n\
       On the functions sheet you can independently specify both the Device and\n\
-      either EFC or OBC of each funtion.  The two part Hex command encodes both\n\
+      either EFC or OBC of each function.  The two part Hex command encodes both\n\
       the device and the OBC.
 Code.S3C80=3D 91 12 8B 13 E6 44 08 08 01 12 03 3C 01 12 01 \
            0B D3 04 11 7E 08 C3 05 60 03 60 04 60 05 18 03 \
