--- a/protocols.ini
+++ b/protocols.ini
@@ -985,20 +985,29 @@ Code.740=0B 1A 11 80 0F C0 78 14 08 08 01 9C 02 FB 04 6C \
          FF 28 3C 00 5B 3C 78 7F 22 00 E6 5B 3C 60 7F 22 \
          00 22 06 A7 3E FD 90 DC 60
 
-#[RC-5]
-#PID=00 E8
-#CmdTranslator=Translator(comp)
-#CmdParms=OBC=0
-#Notes=
-#DevParms=Device 1,Device 2,Device 3
-#FixedData=1f 1f 1f
-#Code.S3C80=40 9A 31 8B 0F C5 81 10 08 06 01 C2 01 A4 01 C2 \
-#           01 A4 DE 2C 08 06 56 C0 03 09 01 76 00 01 6B 09 \
-#           87 10 03 B6 C1 20 97 10 03 8D 01 46
-#Code.740=0F 19 31 80 0C E0 81 21 20 08 06 02 06 02 05 6F \
-#         20 A5 60 29 03 AA B5 5D 17 5A 02 09 20 85 5D 4C \
-#         00 FF
-#
+[RC-5]
+PID=00 E8
+DevParms=Device 1:5=0,OBC>63:bool,Device 2:5=[0],OBC>63:bool,Device 3:5=[2],OBC>63:bool
+DeviceTranslator=Translator(comp,0,5,3) Translator(comp,2,5,11) Translator(comp,4,5,19) \
+                 Rc5FlagTranslator()
+FixedData=1f 1f 1f
+CmdParms=Device:0|1|2|na,OBC:7=0
+CmdTranslator=Translator(comp,1,6) Rc5Translator()
+CmdParmInit=PickInitializer(0,N0,N2,N4,N6)
+Notes=This combo supports half of the possible OBC range for each of up to\n\
+      three device numbers.  To support the whole OBC range for one device\n\
+      number requires using two of the three Device number positions for that\n\
+      one device number.\n\
+      \n\
+      For each Device number position, leave the check box blank to support\n\
+      OBCs from 0 to 63 or mark the check box to support OBCs from 64 to 127.
+Code.S3C80=40 9A 31 8B 0F C5 81 10 08 06 01 C2 01 A4 01 C2 \
+           01 A4 DE 2C 08 06 56 C0 03 09 01 76 00 01 6B 09 \
+           87 10 03 B6 C1 20 97 10 03 8D 01 46
+Code.740=0F 19 31 80 0C E0 81 21 20 08 06 02 06 02 05 6F \
+         20 A5 60 29 03 AA B5 5D 17 5A 02 09 20 85 5D 4C \
+         00 FF
+
 #[RC-5x]
 #PID=00 F2
 #CmdTranslator=Translator(comp,0,8,8)
