--- a/protocols.ini
+++ b/protocols.ini
@@ -333,12 +333,15 @@ Code.740=0B 19 12 80 11 E8 80 01 0A 05 08 01 F5 03 53 41 \
 #
 [Dishplayer]
 PID=01 0F
-DevParms=Device Code:2=3,Unit:6=0
-DeviceTranslator=Translator(0,2,4) Translator(1,4)
+DevParms=Device Code:2=3,Unit:5=0
+DeviceTranslator=Translator(0,2,3) Translator(1,3)
 FixedData=00
 CmdTranslator=Translator(0,6) TranslatorFromDev(1,2,6,4)
 CmdParms=OBC:6=0
-Notes=sat/1005
+Notes=The Device.Unit:OBC should match the decodes from DecodeIR.DLL, which does\n\
+      not match the Device and OBC used in KM.  Use EFCs (not OBCs) to copy any\n\
+      functions between KM and RM.  The Device value corresponds between KM and\n\
+      RM only for Device 0 to 3, Unit 0.
 Code.S3C80=43 8B 11 8B 12 85 49 08 05 01 0B 02 F6 01 0B 05 \
            1C 0B 93 01 0B 0B A6 18 04 E4 03 04 19 03 8D 01 \
            46
