Variants of Dishplayer(old)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@149 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -352,22 +352,67 @@ Code.6805=0C 19 11 20 0E E0 70 15 08 05 02 ED 04 59 06 9B \
           15 08 BC B6 5A B7 51 B6 5B B7 5A B6 51 B7 5B CD \
           01 83 12 7C 19 7C CC 01 83
 
-#[Dishplayer (old)]
-#PID=00 02
-#CmdTranslator=Translator(lsb)
-#CmdParms=OBC=0
-#Notes=sat/0775
-#FixedData=00
-#Code.S3C80=2B 5C 51 8B 14 B6 59 05 06 00 C5 03 32 00 C5 05 \
-#           73 0B F2 00 C5 0B F2 05 02 08 03 37 00 0C E6 22 \
-#           02 E6 0E 43 E6 0F 8B F6 01 55 18 08 56 C1 03 87 \
-#           21 04 29 04 8D 01 46
-#Code.740=06 0D 11 80 0E B0 72 17 08 07 03 19 04 9A 02 46 \
-#         17 08 EC 44 5D 4C 00 FF
-#Code.6805=06 0E 21 20 12 B8 72 17 05 06 03 18 04 99 02 A3 \
-#          17 08 E9 00 04 01 29 07 5B 08 B6 75 B7 6E B6 76 \
-#          B7 6F 33 5A 3C 59 CC 01 83
-#
+[Dishplayer (old)]
+PID=00 02
+DevParms=Unit:5=0,Device Code:5=0
+DeviceTranslator=Translator(lsb,0,3,0,2) Translator(1,5,3)
+CmdParms=OBC:6=0
+CmdTranslator=Translator(0,6) TranslatorFromDev(lsb,0,2,6)
+Notes=Standard SAT/0775 is Unit 0 / Device 0\n\
+      \n\
+      Device, Unit and OBC are all incompatible with KM (version 7.34)\n\
+      They are compatible with DecodeIR.dll as Device.Unit:OBC\n\
+      EFC values are compatible with KM within the same model remote.\n\
+      EFC values are compatible across models of remote for the default unit\n\
+      number and in some cases for other unit numbers.
+FixedData=00
+Code.S3C80=2B 5C 11 8B 12 B5 05 08 08 00 C5 03 32 00 C5 05 \
+           73 00 00 00 C5 0B F2 8D 01 46
+Code.740=06 0D 11 80 0E B0 72 17 08 07 03 19 04 9A 02 46 \
+         17 08 EC 44 5D 4C 00 FF
+
+[Dishplayer (old)]
+PID=00 02
+VariantName=2
+DevParms=Unit:5=0,Device Code:5=0
+DeviceTranslator=Translator(lsb,0,5) Translator(1,5,8)
+CmdParms=OBC:6=0
+CmdTranslator=Translator(0,6)
+Notes=Standard SAT/0775 is Unit 0 / Device 0\n\
+      \n\
+      Device, Unit and OBC are all incompatible with KM (version 7.34)\n\
+      They are compatible with DecodeIR.dll as Device.Unit:OBC\n\
+      EFC values are compatible with KM within the same model remote.\n\
+      EFC values are compatible across models of remote for the default unit\n\
+      number and in some cases for other unit numbers.
+FixedData=00 00
+Code.S3C80=2B 5C 21 8B 14 B7 59 05 06 00 C5 03 32 00 C5 05 \
+           73 0B F2 00 C5 0B F2 05 02 8D 01 46
+Code.6805=06 0E 21 20 12 B8 72 17 05 06 03 18 04 99 02 A3 \
+          17 08 E9 00 04 01 29 07 5B 08 B6 75 B7 6E B6 76 \
+          B7 6F 33 5A 3C 59 CC 01 83
+
+[Dishplayer (old)]
+PID=00 02
+VariantName=5
+DevParms=Unit:5=0,Device Code:5=0
+DeviceTranslator=Translator(lsb,0,5) Translator(1,5,8)  Translator(1,5,16) \
+                 Translator(1,5,24)  Translator(1,5,32)
+CmdParms=OBC:6=0
+CmdTranslator=Translator(0,6)
+Notes=Standard SAT/0775 is Unit 0 / Device 0\n\
+      \n\
+      Device, Unit and OBC are all incompatible with KM (version 7.34)\n\
+      They are compatible with DecodeIR.dll as Device.Unit:OBC\n\
+      EFC values are compatible with KM within the same model remote.\n\
+      EFC values are compatible across models of remote for the default unit\n\
+      number and in some cases for other unit numbers.
+FixedData=00 00 00 00 00
+Code.S3C80=2B 5C 51 8B 14 B6 59 05 06 00 C5 03 32 00 C5 05 \
+           73 0B F2 00 C5 0B F2 05 02 08 03 37 00 0C E6 22 \
+           02 E6 0E 43 E6 0F 8B F6 01 55 18 08 56 C1 03 87 \
+           21 04 29 04 8D 01 46 
+
 #[Echostar 2200]
 #PID=01 82
 #CmdTranslator=Translator(comp)
