--- a/protocols.ini
+++ b/protocols.ini
@@ -426,18 +426,21 @@ Code.S3C80=2B 5C 51 8B 14 B6 59 05 06 00 C5 03 32 00 C5 05 \
 #Code.740=07 0C 21 80 0C E0 82 21 30 08 07 01 F9 01 F8 30 \
 #         9B 17 5F 04 A5 5E 80 02 A5 5D 17 5A 02 49 20 85 \
 #         5D 4C 00 FF
-#
-#[Emerson]
-#PID=00 65
-#CmdTranslator=Translator(lsb,comp)
-#CmdParms=OBC=0
-#Notes=
-#DevParms=Device 1,Device 2,Device 3
-#FixedData=00 00 00
-#Code.S3C80=45 91 31 8B 12 D5 45 06 06 01 B3 01 9F 01 B3 05 \
-#           05 CC 6A 06 CC 06 B8 E4 06 01 56 01 03 8D 01 46
-#Code.740=0B 1A 31 80 0F F4 B2 01 20 06 06 02 0F 04 55 66 \
-#         3F 80 05 7B A5 60 29 03 85 5B 4C 00 FF
+
+[Emerson]
+PID=00 65
+DevParms=Device 1:6=0,Device 2:6=[0],Device 3:6=[1]
+DeviceTranslator=Translator(lsb,comp,0,6,0) Translator(lsb,comp,1,6,8) \
+                 Translator(lsb,comp,2,6,16)
+CmdParms=Device:Dev. 1|Dev. 2|Dev. 3|OBC=0,OBC:6=0
+CmdParmInit=ParmInitializer(0)
+CmdTranslator=Translator(0,2,6) Translator(lsb,comp,1,6)
+Notes=
+FixedData=00 00 00
+Code.S3C80=45 91 31 8B 12 D5 45 06 06 01 B3 01 9F 01 B3 05 \
+           05 CC 6A 06 CC 06 B8 E4 06 01 56 01 03 8D 01 46
+Code.740=0B 1A 31 80 0F F4 B2 01 20 06 06 02 0F 04 55 66 \
+         3F 80 05 7B A5 60 29 03 85 5B 4C 00 FF
 
 [F12]
 PID=00 1A
