Changed Panasonic Combo2 to use the new variant of 00CD
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@151 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -813,22 +813,27 @@ Code.740=0B 1B 42 80 0E C1 72 10 08 00 01 7D 02 9F 5F 02 \
          80 03 35 F7 62 02 6F 5F D7 62 02 FF 60 3C 06 69 \
          A5 60 45 5F 45 61 85 62 4C 00 FF
 
-#[Panasonic Combo]
-#PID=00 CD
-#DefaultCmd=00 00
-#Code.S3C80=45 91 32 8B 12 8F 44 08 08 00 DA 00 C6 00 DA 02 \
-#           7B 90 C9 06 D0 03 54 E6 0C E8 E4 07 08 20 11 18 \
-#           06 A6 C1 FF 6B 1E A6 C1 DF 6B 1F A6 C1 C7 6B 20 \
-#           A6 C1 AF 6B 21 A6 C1 97 6B 22 A6 C1 B7 6B 23 A6 \
-#           C1 F7 6B 24 B6 08 05 8D FF 6B B6 08 25 8D FF 6B \
-#           B6 08 3D 8D FF 6B B6 08 55 8D FF 6B B6 08 6D 8D \
-#           FF 6B B6 08 4D 8D FF 6B B6 08 0D F6 01 46 F6 01 \
-#           0A FB 0D 00 0C EB F4 C6 3E 00 00 B0 4A F6 01 0A \
-#           AF
-#Code.740=0B 1C 32 80 0E C1 72 10 08 08 01 7F 02 A1 5F 02 \
-#         80 03 39 A5 5F 45 60 45 61 85 62 3C 06 69 4C 00 \
-#         FF
-#
+[Panasonic Combo2]
+PID=00 CD
+VariantName=2
+DevParms=Main Device=160,OEM Dev1=2,OEM Dev2=32
+DeviceTranslator=Translator(lsb,comp,0,8,16)  \
+                 Translator(lsb,comp,1,8,0)  \
+                 Translator(lsb,comp,2,8,8)
+FixedData=bf fb fa
+CmdParms=Sub Device=0,OBC=0
+CmdTranslator=Translator(lsb,comp,0) Translator(lsb,comp,1,8,8)
+DefaultCmd=ff ff
+CmdIndex=1
+Notes=Combines all Sub Device numbers for one Device number.\n\
+      \n\
+      Normally leave the OEM fields blank to default to 2 and 32, which are the only\n\
+      values used by Panasonic.  To use this combo as a JVC-48 combo, change those\n\
+      to 3 and 1.
+Code.S3C80=45 91 32 8B 12 8F 45 08 08 00 DA 00 C6 00 DA 02 \
+           7B 90 C9 06 D0 03 54 E4 05 08 B4 06 08 B4 07 08 \
+           20 11 8D 01 46
+
 [Panasonic Combo2]
 PID=00 42
 DevParms=Main Device=160,Sub Device=0,OEM Dev1=2,OEM Dev2=32
@@ -842,22 +847,36 @@ CmdTranslator=Translator(lsb,comp,0,8,8) Translator(lsb,comp,1)
 DefaultCmd=ff ff
 CmdIndex=0
 Notes=Combines all Sub Device numbers for one Device number.\n\
-\n\
-The Sub Device on this setup page serves only as a default for the Sub Device\n\
-selected for each function of the functions page.\n\
-The setup page Sub Device does get encoded in the fixed data but the remote\n\
-ignores that byte of fixed data and uses the Sub Device of each function\n\
-instead.\n\
-\n\
-Normally leave the OEM fields blank to default to 2 and 32, which are the only\n\
-values used by Panasonic.  To use this combo as a JVC-48 combo, change those\n\
-to 3 and 1.
-Code.S3C80=45 91 42 8b 12 8f 44 08 08 00 da 00 c6 00 da 02 \
-           7b 90 c9 06 d0 03 54 e6 0c e8 08 08 09 06 08 05 \
-           B4 06 c0 B4 07 c0 09 08 f6 01 46 f6 01 0a fb 0d \
-           00 0c eb f4 c6 3e 00 00 b0 4a f6 01 0a af
+      \n\
+      The Sub Device on this setup page serves only as a default for the Sub Device\n\
+      selected for each function of the functions page.\n\
+      The setup page Sub Device does get encoded in the fixed data but the remote\n\
+      ignores that byte of fixed data and uses the Sub Device of each function\n\
+      instead.\n\
+      \n\
+      Normally leave the OEM fields blank to default to 2 and 32, which are the only\n\
+      values used by Panasonic.  To use this combo as a JVC-48 combo, change those\n\
+      to 3 and 1.
 Code.740=0B 1C 42 80 0E E3 72 10 08 08 01 7F 02 A1 5F 02 \
          80 03 39 A5 62 85 60 45 5F 45 61 85 62 4C 00 FF
+
+[Panasonic Combo (flawed)]
+PID=00 CD
+DevParms=Main Device=160,OEM Dev1=2,OEM Dev2=32
+DeviceTranslator=Translator(lsb,comp,0,8,16)  \
+                 Translator(lsb,comp,1,8,0)  \
+                 Translator(lsb,comp,2,8,8)
+FixedData=bf fb fa
+CmdParms=Sub Device=0,OBC=0
+CmdTranslator=Translator(lsb,comp) Translator(lsb,comp,1,8,8)
+DefaultCmd=ff ff
+CmdIndex=1
+Notes=Combines some Sub Device numbers for one Device number.\n\
+      \n\
+      Seriously flawed\n\
+      May be useful if the desired combinations happen to be among the few that\n\
+      work and your remote happens to have this protocol built in.  Otherwise,\n\
+      use Panasonic Combo2, which does the same job correctly.
 
 [Panasonic2 (LCD)]
 PID=01 09
