Changed NEC combo protocols
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@170 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -617,39 +617,44 @@ Code.740=0B 1A 31 80 15 F6 B8 01 16 08 08 01 A1 03 17 69 \
          19 37 5D 02 22 00 97 5D 0F 22 00 3C C0 7E 44 5E \
          3C 01 6B 22 06 90 03 60 4F 7F 2F 7F 4C 00 FF
 
-[NEC1 Combo]
+[NEC Combo]
 PID=01 40
+DevParms=Device Code=184,NEC2:bool
+DeviceTranslator=Translator(lsb,comp,0,8,8) Translator(1,1)
 CmdTranslator=Translator(lsb,comp) Translator(lsb,comp,1,8,8)
-CmdParms=Sub Device,OBC=0
+CmdParms=Sub Device=0,OBC=0
 CmdIndex=1
-Notes=38.1 kHz
-DevParms=Device Code=184
-DeviceTranslator=Translator(lsb,comp,0,8,8)
+Notes=Combines all subdevice for one device of either NEC1 or NEC2\n\
+      \n\
+      For NEC1, the NEC1 Combo does the same job in less space for any\n\
+      of the newer remotes, which have that protocol available.\n\
+      \n\
+      Hex commands are compatible between this protocol and NEC1 combo.\n\
+      EFC's are compatible across combo and non combo versions of NEC.
 FixedData=00 e2
 DefaultCmd=1d 00
-Code.S3C80=43 8B 22 8B 12 CF 44 08 08 01 18 01 06 01 18 03 \
-           39 D2 DC 11 94 08 B6 20 01 E4 06 07 60 07 20 10 \
-           08 03 37 01 03 46 29 0D 46 29 01 8D 01 49
 Code.740=0B 1A 22 80 15 E3 BE 01 16 08 08 01 A1 03 17 69 \
          78 54 06 C7 02 08 01 01 03 DB A5 5E 85 5D A5 5F \
          85 5E A5 60 85 5F 44 60 E6 69 4C 00 FF
+Code.S3C80=43 8B 22 8B 12 CF 44 08 08 01 18 01 06 01 18 03 \
+           39 D2 DC 11 94 08 B6 20 01 E4 06 07 60 07 20 10 \
+           08 03 37 01 03 46 29 0D 46 29 01 8D 01 49
 
-[NEC2 Combo]
-PID=01 40
+[NEC1 Combo]
+PID=00 B6
+DevParms=Device Code=184
+DeviceTranslator=Translator(lsb,comp)
+FixedData=00
+CmdParms=Sub Device=0,OBC=0
 CmdTranslator=Translator(lsb,comp) Translator(lsb,comp,1,8,8)
-CmdParms=Sub Device,OBC=0
 CmdIndex=1
 DefaultCmd=1d 00
-DevParms=Device Code=184
-DeviceTranslator=Translator(lsb,comp,0,8,8)
-FixedData=01 e2
-Notes=38.1 kHz
-Code.S3C80=43 8B 22 8B 12 CF 44 08 08 01 18 01 06 01 18 03 \
-           39 D2 DC 11 94 08 B6 20 01 E4 06 07 60 07 20 10 \
-           08 03 37 01 03 46 29 0D 46 29 01 8D 01 49
-Code.740=0B 1A 22 80 15 E3 BE 01 16 08 08 01 A1 03 17 69 \
-         78 54 06 C7 02 08 01 01 03 DB A5 5E 85 5D A5 5F \
-         85 5E A5 60 85 5F 44 60 E6 69 4C 00 FF
+Notes=Combines all subdevice for one device.\n\
+      \n\
+      EFC's are compatible across combo and non combo versions of NEC.
+Code.S3C80=43 8B 12 8B 12 CF 4D 08 08 01 18 01 06 01 18 03 \
+           39 D2 DC 11 94 08 B6 E4 05 06 60 06 20 10 8D 01 \
+           46
 
 #[NEC1 2DEV Combo]
 #PID=01 41
