--- a/protocols.ini
+++ b/protocols.ini
@@ -541,7 +541,7 @@ Code.740=0B 1A 11 80 10 E0 B8 01 14 08 08 01 9C 02 FC 2D \
 PID=00 C9
 CmdTranslator=Translator(lsb,comp)
 CmdParms=OBC=0
-Notes=JVC version
+Notes=JVC version of Kaseikyo
 DevParms=Main Device,Sub Device
 DeviceTranslator=Translator(lsb,comp,0,8,24) \
                  Translator(lsb,comp,1,8,32) \
@@ -554,6 +554,33 @@ Code.S3C80=45 91 51 8B 12 8F 44 08 08 00 DA 00 C6 00 DA 02 \
 Code.740=0B 1C 51 80 0E E1 72 10 08 08 01 7F 02 A1 5F 02 \
          80 03 39 44 5D E6 5B A5 62 45 5D 85 63 E6 69 4C \
          00 FF
+
+[Kaseikyo]
+PID=01 C9
+VariantName=E
+DevParms=Device:4=8,Sub Device=18,OEM1=170,OEM2=90,E=1
+DeviceTranslator=Translator(lsb,comp,0,4,20) \
+                 Translator(lsb,comp,1,8,24) \
+                 Translator(lsb,comp,2,8,0)  \
+                 Translator(lsb,comp,3,8,8)  \
+                 Translator(lsb,comp,4,4,32) \
+                 XorCheck(4,16,15,4) \
+                 XorCheck(4,36,15,4)
+FixedData=00 00 00 00 00
+CmdParms=OBC=0
+CmdTranslator=Translator(lsb,comp)
+Notes=This is our current best guess at the "standard" version of Kaseikyo, \
+      which isn't very standard because we've only ever seen it in Sharp \
+      brand devices, while there is a common "nonstandard" Kaseikyo, which \
+      we support as Panasonic and as JVC-48, plus another "nonstandard" \
+      version of Kaseikyo which we decode as Fujitsu. \
+      \n\nWhen used by Sharp, OEM1 is always 170, OEM2 is always 90, and E has \
+      been 1 in almost every example we know of. \
+      \n\nIn a decode, the protocol name should look like \
+      \nKaseikyo-170.90 where 170 is OEM1 and 90 is OEM2.
+Code.S3C80= 46 90 51 8B 12 87 45 08 08 00 D7 00 B5 00 D7 02 \
+            6A 88 B8 06 AA 03 41 08 08 E4 07 08 09 07 F0 C0 \
+            B4 07 C0 56 C0 0F B4 C0 08 8D 01 46 
 
 [Mitsubishi]
 PID=00 14
