--- a/protocols.ini
+++ b/protocols.ini
@@ -1486,6 +1486,33 @@ Code.740=0A 18 21 80 12 A8 90 09 30 04 08 01 B6 01 B6 2B \
          5E 22 00 3C 07 77 3C D0 5D A9 89 45 5E 85 5E 4C \
          00 FF
 
+[Thomson]
+PID=00 4B
+DefaultCmd=00
+DevParms=Device:6=0
+DeviceTranslator=Translator(lsb,comp,0,4) \
+                 Translator(comp,0,1,5,5)
+FixedData=00
+CmdParms=OBC:6=0
+CmdTranslator=Translator(lsb,comp,0,6)
+DefaultHex=00
+Code.740=0F 1D 11 80 0C E0 A2 01 10 06 06 03 97 06 E0 4E \
+         14 17 5A 02 6F 5D 4C 00 FF
+
+[Thomson]
+PID=00 4B
+VariantName=7
+DefaultCmd=00
+DevParms=Device:6=0
+DeviceTranslator=Translator(lsb,comp,0,4)
+FixedData=00
+CmdParms=OBC:6=0
+CmdTranslator=Translator(lsb,comp,0,6,1) \
+              TranslatorFromDev(comp,0,1,0,5)
+DefaultHex=00
+Code.S3C80=76 76 11 8B 0E C5 41 05 07 00 F2 03 DC 00 F2 08 \
+           BE 9C 40 31 02 27 07 03 31 C2 8D 01 46
+
 [TiVo Hacked]
 PID=00 41
 CmdTranslator=Translator(lsb,comp)
