Add support for OldNames for protocols
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@276 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -410,7 +410,7 @@ FixedData=00 00 00 00 00
 Code.S3C80=2B 5C 51 8B 14 B6 59 05 06 00 C5 03 32 00 C5 05 \
            73 0B F2 00 C5 0B F2 05 02 08 03 37 00 0C E6 22 \
            02 E6 0E 43 E6 0F 8B F6 01 55 18 08 56 C1 03 87 \
-           21 04 29 04 8D 01 46 
+           21 04 29 04 8D 01 46
 
 #[Echostar 2200]
 #PID=01 82
@@ -538,6 +538,7 @@ Code.740=0B 1A 11 80 10 E0 B8 01 14 08 08 01 9C 02 FC 2D \
          4C 00 FF
 
 [JVC-48]
+OldNames=Panasonic JVC
 PID=00 C9
 CmdTranslator=Translator(lsb,comp)
 CmdParms=OBC=0
@@ -580,7 +581,7 @@ Notes=This is our current best guess at the "standard" version of Kaseikyo, \
       \nKaseikyo-170.90 where 170 is OEM1 and 90 is OEM2.
 Code.S3C80= 46 90 51 8B 12 87 45 08 08 00 D7 00 B5 00 D7 02 \
             6A 88 B8 06 AA 03 41 08 08 E4 07 08 09 07 F0 C0 \
-            B4 07 C0 56 C0 0F B4 C0 08 8D 01 46 
+            B4 07 C0 56 C0 0F B4 C0 08 8D 01 46
 
 [Mitsubishi]
 PID=00 14
@@ -596,6 +597,7 @@ Code.740=10 1D 11 80 0C E0 A2 01 0A 08 08 02 1F 03 B7 34 \
          7B 3C 02 83 4C 00 FF
 
 [NEC1]
+OldNames=NEC Generic
 PID=00 5A
 CmdTranslator=Translator(lsb,comp)
 CmdParms=OBC=0
@@ -986,7 +988,7 @@ Notes=DVD/0525,0571\
       \n\n\
       The set of signals you need for your Pioneer device may or may not be covered \
       by these limits.  If you need more flexibility, you should look into the other \
-      Pioneer protocols and/or use Key Moves on another setup code for some of your \ 
+      Pioneer protocols and/or use Key Moves on another setup code for some of your \
       signals.
 DevParms=Device 1=163,Prefix Command=153,Device 2=175
 FixedData=3a 66 0a
@@ -1216,6 +1218,7 @@ Code.740=05 0E 11 80 0F F4 18 1D 04 08 03 87 02 3A 09 01 \
          44 7F 7F 3C E4 73 22 06 90 EA 60
 
 [RCA Combo (Official)]
+OldNames=RCA Combo
 PID=01 14
 CmdTranslator=Translator(0,4,0) Translator(1,8,8)
 CmdParms=Device=0:4,OBC=0
@@ -1294,6 +1297,7 @@ Code.740=0D 1F 11 80 0C E0 A2 01 06 05 06 08 2B 0B EA 86 \
 #          50 3a 51 26 ec 81 ad 00 a6 8d 4a 26 fd 26 00 81
 #
 #[ReplayTV (Advanced)]
+#OldNames=ReplayTV Hacked,ReplayTV 1994
 #PID=01 45
 #CmdTranslator=Translator()
 #CmdParms=OBC=0
@@ -1315,6 +1319,7 @@ Code.740=0D 1F 11 80 0C E0 A2 01 06 05 06 08 2B 0B EA 86 \
 #         c6 57 d0 e0 60
 #
 [ReplayTV (Official)]
+OldNames=ReplayTV Official
 PID=00 92
 CmdTranslator=Translator(0,8,8)
 CmdParms=OBC=0
