Match KM changes for TiVo protocols
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@283 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -1518,7 +1518,8 @@ DefaultHex=00
 Code.S3C80=76 76 11 8B 0E C5 41 05 07 00 F2 03 DC 00 F2 08 \
            BE 9C 40 31 02 27 07 03 31 C2 8D 01 46
 
-[TiVo Hacked]
+[TiVo (Advanced)]
+OldNames=TiVo Hacked
 PID=00 41
 CmdTranslator=Translator(lsb,comp)
 CmdParms=OBC=0
@@ -1537,8 +1538,29 @@ Code.6805=0D 19 31 20 15 C1 FE 00 16 08 08 01 9D 03 0E 38 \
           FB 56 06 C3 02 00 7E A5 03 DB A6 04 B7 66 B6 5D \
           97 43 AA F0 B4 5C B7 5D BF 5C CC 01 83
 
-[TiVo Official]
+[TiVo (Official)]
 PID=01 11
+CmdTranslator=Translator(lsb,comp)
+CmdParms=OBC=0
+DevParms=Main Device=133,Sub Device=48,Unit Code=0:0|1|2|3|4|5|6|7|8
+FixedData=FF FF FF
+DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8) \
+                 Translator(lsb,comp,2,8,16)
+Notes=hacked version
+Code.S3C80=43 8d 31 8b 12 cf 44 08 08 01 1a 01 06 01 1a 03 \
+           31 d7 42 11 a7 08 b7 08 05 E4 06 05 60 06 46 06 \
+           F0 54 C0 06 f6 01 46 46 29 0d 8d 01 49
+Code.740=0D 18 31 80 15 E3 BE 01 16 08 08 01 A4 03 15 6B \
+         AB 55 06 C7 02 00 01 01 03 E5 A5 60 AA 49 FF 09 \
+         F0 25 5F 85 60 86 5F 4C 00 FF
+Code.6805=0D 19 31 20 15 C1 FE 00 16 08 08 01 9D 03 0E 38 \
+          FB 56 06 C3 02 00 7E A5 03 DB A6 04 B7 66 B6 5D \
+          97 43 AA F0 B4 5C B7 5D BF 5C CC 01 83
+
+[TiVo (Official 2-byte)]
+OldNames=TiVo Official
+PID=01 11
+VariantName=2byte
 CmdTranslator=Translator(lsb,comp,0,8,8)
 CmdParms=OBC=0
 Notes=official version
