--- a/protocols.ini
+++ b/protocols.ini
@@ -1112,26 +1112,27 @@ Code.740=0F 19 31 80 0C E0 81 21 20 08 06 02 06 02 05 6F \
          20 A5 60 29 03 AA B5 5D 17 5A 02 09 20 85 5D 4C \
          00 FF
 
-#[RC-5x]
-#PID=00 F2
-#CmdTranslator=Translator(comp,0,8,8)
-#CmdParms=OBC=0
-#Notes=
-#DevParms=Device Code
-#FixedData=ff
-#DefaultCmd=ff 00
-#CmdIndex=1
-#Code.S3C80=40 9A 12 8B 17 89 81 10 08 08 01 BB 01 A8 01 BB \
-#           01 A8 94 01 00 00 06 7D 00 00 04 09 76 00 01 6B \
-#           03 B6 03 20 77 77 8D 01 46
-#Code.740=0C 1C 12 80 0C E9 C0 20 20 08 08 02 07 02 06 03 \
-#         78 17 5A 02 AF 5D 3C 04 77 2F 5C 3C C0 7E 22 00 \
-#         3C A8 7E 22 00 A2 78 A0 5D 22 44 4C 03 FF
-#Code.6805=0C 1D 12 20 11 C0 C0 20 20 08 08 02 13 02 0A 03 \
-#          F9 00 00 00 00 04 01 57 06 B6 5A A8 20 B7 5A A6 \
-#          02 B7 59 A6 C0 B7 7B CD 01 83 A6 A8 B7 7B CD 01 \
-#          83 A6 5D AE 08 CD 01 9E CD 01 8C 24 E2 81
-#
+[RC-5x] 
+PID=00 F2 
+DevParms=Device Code:5=0 
+DeviceTranslator=Translator(comp,0,5,3) 
+FixedData=1f 
+CmdTranslator=Translator(comp,0,7,5) 
+CmdParms=OBC:7=0 
+DefaultCmd=ff 00 
+CmdIndex=1 
+Notes= 
+Code.S3C80=40 9A 12 8B 17 89 81 10 08 08 01 BB 01 A8 01 BB \ 
+           01 A8 94 01 00 00 06 7D 00 00 04 09 76 00 01 6B \ 
+           03 B6 03 20 77 77 8D 01 46 
+Code.740=0C 1C 12 80 0C E9 C0 20 20 08 08 02 07 02 06 03 \ 
+         78 17 5A 02 AF 5D 3C 04 77 2F 5C 3C C0 7E 22 00 \ 
+         3C A8 7E 22 00 A2 78 A0 5D 22 44 4C 03 FF 
+Code.6805=0C 1D 12 20 11 C0 C0 20 20 08 08 02 13 02 0A 03 \ 
+          F9 00 00 00 00 04 01 57 06 B6 5A A8 20 B7 5A A6 \ 
+          02 B7 59 A6 C0 B7 7B CD 01 83 A6 A8 B7 7B CD 01 \ 
+          83 A6 5D AE 08 CD 01 9E CD 01 8C 24 E2 81
+
 #[RC-5/5x Combo]
 #PID=00 73
 #CmdTranslator=Translator(0,8,8)
@@ -1157,7 +1158,7 @@ Code.740=0F 19 31 80 0C E0 81 21 20 08 06 02 06 02 05 6F \
 #         60 3C 06 6C 3C E1 7E 3C 81 7F 3C 21 80 3C 01 69 \
 #         A5 73 85 71 A5 74 85 72 A5 62 85 5E A5 61 17 5A \
 #         02 49 20 85 5D 4C 00 FF 60
-#
+
 [RC-6]
 PID=00 58
 CmdTranslator=Translator()
