Add Pioneer 2CMD protocol
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@337 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -11,9 +11,7 @@
 #      $ means the parameter uses only hex values, in the GUI and for values in the
 #        description or default value.
 #      <description> is one of
-#      - min-max, the min and max values allowed
-#      - bits, the number of bits to used to store the value, equivalent to
-#        using min of 0 and max of ( 2 ** bits ) - 1
+#      - bits, the number of bits to used to store the value
 #      - a bar (|) separated list of choices.
 #      <default value> is the default value to be used.  If there is a choice
 #      list, it is the index of the default choice.
@@ -412,19 +410,20 @@ Code.S3C80=2B 5C 51 8B 14 B6 59 05 06 00 C5 03 32 00 C5 05 \
            02 E6 0E 43 E6 0F 8B F6 01 55 18 08 56 C1 03 87 \
            21 04 29 04 8D 01 46
 
-#[Echostar 2200]
-#PID=01 82
-#CmdTranslator=Translator(comp)
-#CmdParms=OBC=0
-#Notes=sat/1200
-#DevParms=Device Code
-#FixedData=0e 00
-#Code.S3C80=2C 5C 21 8B 0F C5 81 10 08 07 01 A4 01 95 01 A4 \
-#           01 95 60 D1 08 05 56 C0 01 09 01 76 00 01 6B 09 \
-#           87 10 03 B6 C1 20 97 10 03 8D 01 46
-#Code.740=07 0C 21 80 0C E0 82 21 30 08 07 01 F9 01 F8 30 \
-#         9B 17 5F 04 A5 5E 80 02 A5 5D 17 5A 02 49 20 85 \
-#         5D 4C 00 FF
+[Echostar 2200]
+PID=01 82
+CmdTranslator=Translator(comp)
+CmdParms=OBC=0
+Notes=sat/1200
+DevParms=Device Code:5=17
+DeviceTranslator=Translator(comp,0,5,3)
+FixedData=0e 00
+Code.S3C80=2C 5C 21 8B 0F C5 81 10 08 07 01 A4 01 95 01 A4 \
+           01 95 60 D1 08 05 56 C0 01 09 01 76 00 01 6B 09 \
+           87 10 03 B6 C1 20 97 10 03 8D 01 46
+Code.740=07 0C 21 80 0C E0 82 21 30 08 07 01 F9 01 F8 30 \
+         9B 17 5F 04 A5 5E 80 02 A5 5D 17 5A 02 49 20 85 \
+         5D 4C 00 FF
 
 [Emerson]
 PID=00 65
@@ -1007,10 +1006,12 @@ Code.740=0A 18 31 80 10 F6 B8 01 16 08 08 01 9F 02 FF 57 \
 #CmdTranslator=Translator(lsb,comp)
 #CmdParms=OBC=0
 #Notes=DVD/0525,0571
-#DevParms=Device 1,Device 2,Command 1
+#DevParms=Device 1:8=163,Device 2:8=175,Command 1:8=153
+#DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,16) \
+#                  Translator(lsb,comp,2,8,8)
 #FixedData=3a 66 0a ff
 #DefaultCmd=00 00
-#
+
 #[Pioneer MIX]
 #PID=00 7E
 #CmdTranslator=Translator(lsb,comp)
@@ -1035,21 +1036,22 @@ Code.740=0A 18 31 80 10 F6 B8 01 16 08 08 01 9F 02 FF 57 \
 #          CD 01 83 A6 04 B7 66 A6 02 B7 58 BE 53 BF 5D CD \
 #          01 83 3A 58 3A 58 CD 01 8C 24 D9 81
 #
-#[Pioneer 2CMD]
-#PID=00 5F
-#CmdTranslator=Translator(lsb)
-#CmdParms=OBC=0
-#Notes=audio/0300
-#DevParms=Device Code
-#FixedData=A5
-#DefaultCmd=00 46
-#Code.S3C80=3F 84 12 8B 12 E5 44 08 08 01 06 03 00 01 06 00 \
-#           F2 D2 DC 10 13 08 51 F6 01 46 20 10 F6 01 46 00 \
-#           10 F6 01 0A 7B F1 AF
-#Code.740=0E 14 12 80 10 F6 B8 01 16 08 08 02 F7 01 98 69 \
-#         34 55 06 81 02 3C 01 69 1F 7F 22 00 E6 69 0F 7F \
-#         22 00 4C 03 FF
-#
+[Pioneer 2CMD]
+PID=00 5F
+CmdTranslator=Translator(lsb,0,8,0), Translator(lsb,1,8,8)
+CmdParms=OBC=0,Byte 2=0
+Notes=audio/0300
+DevParms=Device Code:8=165
+DeviceTranslator=Translator(lsb)
+FixedData=A5
+DefaultCmd=00 00
+Code.S3C80=3F 84 12 8B 12 E5 44 08 08 01 06 03 00 01 06 00 \
+           F2 D2 DC 10 13 08 51 F6 01 46 20 10 F6 01 46 00 \
+           10 F6 01 0A 7B F1 AF
+Code.740=0E 14 12 80 10 F6 B8 01 16 08 08 02 F7 01 98 69 \
+         34 55 06 81 02 3C 01 69 1F 7F 22 00 E6 69 0F 7F \
+         22 00 4C 03 FF
+
 #[Pioneer 3DEV]
 #PID=00 6A
 #CmdTranslator=Translator(lsb)
@@ -1278,7 +1280,8 @@ Code.740=0D 1F 11 80 0C E0 A2 01 06 05 06 08 2B 0B EA 86 \
 #CmdTranslator=Translator()
 #CmdParms=OBC=0
 #Notes=hacked version
-#DevParms=Device Code,Unit Code
+#DevParms=Device Code=1,Unit Code=0
+#DeviceTranslator=
 #FixedData=a9 35 55 65 55 55 00
 #Code.S3C80=47 93 71 8B 12 87 05 08 04 00 DE 00 00 00 00 00 \
 #           CA D4 44 05 35 01 A8 0C 0A 02 11 10 09 10 0A 10 \
@@ -1520,7 +1523,7 @@ Code.S3C80=76 76 11 8B 0E C5 41 05 07 00 F2 03 DC 00 F2 08 \
            BE 9C 40 31 02 27 07 03 31 C2 8D 01 46
 
 [TiVo (Advanced)]
-OldNames=TiVo Hacked
+OldNames=TiVo Hacked,Tivo Hacked,Tivo (Advanced)
 PID=00 41
 CmdTranslator=Translator(lsb,comp)
 CmdParms=OBC=0
@@ -1540,6 +1543,7 @@ Code.6805=0D 19 31 20 15 C1 FE 00 16 08 08 01 9D 03 0E 38 \
           97 43 AA F0 B4 5C B7 5D BF 5C CC 01 83
 
 [TiVo (Official)]
+OldNames=Tivo (Official)
 PID=01 11
 CmdTranslator=Translator(lsb,comp)
 CmdParms=OBC=0
@@ -1559,7 +1563,7 @@ Code.6805=0D 19 31 20 15 C1 FE 00 16 08 08 01 9D 03 0E 38 \
           97 43 AA F0 B4 5C B7 5D BF 5C CC 01 83
 
 [TiVo (Official 2-byte)]
-OldNames=TiVo Official
+OldNames=TiVo Official,Tivo Official,Tivo (Official 2-byte)
 PID=01 11
 VariantName=2byte
 CmdTranslator=Translator(lsb,comp,0,8,8)
