When importing a saved KM upgrade file, use PID in addition to name to find the protocol.
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@342 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -889,6 +889,10 @@ Notes=Combines all Sub Device numbers for one Device number. \
       Normally leave the OEM fields blank to default to 2 and 32, which are the only \
       values used by Panasonic.  To use this combo as a JVC-48 combo, change those \
       to 3 and 1.
+Code.S3C80=45 91 42 8B 12 8F 44 08 08 00 DA 00 C6 00 DA 02 \
+           7B 90 C9 06 D0 03 54 E6 0C E8 08 08 09 06 08 05 \
+           B4 06 C0 B4 07 C0 09 08 F6 01 46 F6 01 0A FB 0D \
+           00 0C EB F4 C6 3E 00 00 B0 4A F6 01 0A AF
 Code.740=0B 1C 42 80 0E E3 72 10 08 08 01 7F 02 A1 5F 02 \
          80 03 39 A5 62 85 60 45 5F 45 61 85 62 4C 00 FF
 
