--- a/protocols.ini
+++ b/protocols.ini
@@ -1193,6 +1193,54 @@ Code.6805=09 1F 21 A6 60 BD B7 AD 4A CD 01 92 A6 04 97 AD \
           9D 26 18 A3 02 25 DE 26 11 A6 6C AE 90 CD 01 9E \
           CC 01 89 AD 00 A6 8D 4A 26 FD 81 AD FD 20 CF
 
+
+[RC6-M-20n]
+PID=00 20
+VariantName=short
+Notes=This protocol supports any RC6-M-20 variant where the toggle bit doesn't \
+      actually toggle (in decodes the T value is always the same).\n\n\
+      The only examples we have seen are for the "Sky" device.\n\
+      In those examples M is always 6, Device is always 0, Sub Device is either 0 \
+      or 12, and T is always 0.
+DevParms=M=6,Device,Sub Device,T
+FixedData=80 00 00 00 00 00
+DeviceTranslator=Translator(0,1,2,2) Translator(0,1,3,2,comp) \
+                 Translator(0,1,4,1) Translator(0,1,5,1,comp) \
+                 Translator(0,1,6,0) Translator(0,1,7,0,comp) \
+                 Translator(1,1,12,7) Translator(1,1,13,7,comp) \
+                 Translator(1,1,14,6) Translator(1,1,15,6,comp) \
+                 Translator(1,1,16,5) Translator(1,1,17,5,comp) \
+                 Translator(1,1,18,4) Translator(1,1,19,4,comp) \
+                 Translator(1,1,20,3) Translator(1,1,21,3,comp) \
+                 Translator(1,1,22,2) Translator(1,1,23,2,comp) \
+                 Translator(1,1,24,1) Translator(1,1,25,1,comp) \
+                 Translator(1,1,26,0) Translator(1,1,27,0,comp) \
+                 Translator(2,1,28,3) Translator(2,1,29,3,comp) \
+                 Translator(2,1,30,2) Translator(2,1,31,2,comp) \
+                 Translator(2,1,36,1) Translator(2,1,37,1,comp) \
+                 Translator(2,1,38,0) Translator(2,1,39,0,comp) \
+                 Translator(3,1,08,0) Translator(3,1,10,0,comp) \
+                 Translator(3,1,09,0) Translator(3,1,11,0,comp)
+CmdParms=OBC=0
+CmdTranslator=Translator()
+Code.S3C80=47 93 61 8B 12 87 05 08 04 00 DE 00 00 00 00 00 \
+           CA D4 44 05 35 01 A8 0C 0A 18 07 02 11 10 08 10 \
+           07 10 09 10 C1 1E 10 08 10 07 0A EF 19 09 8D 01 \
+           33
+
+[RC6-M-20n]
+PID=00 20
+Notes=This protocol supports any RC6-M-20 variant where the toggle bit doesn't \
+      actually toggle (in decodes the T value is always zero).\n\n\
+      The only examples we have seen are for the "Sky" device.\n\
+      In those examples M is always 6, Device is always 0, Sub Device is either 0 \
+      or 12, and T is always 0.
+DevParms=M=6,Device,Sub Device
+FixedData=80 00
+DeviceTranslator=Translator(0,3,1) Translator(1,8,8) Translator(2,4,4)
+CmdParms=OBC=0
+CmdTranslator=Translator()
+
 [RCA]
 PID=00 AF
 CmdTranslator=Translator()
