--- a/protocols.ini
+++ b/protocols.ini
@@ -1226,7 +1226,7 @@ CmdTranslator=Translator()
 Code.S3C80=47 93 61 8B 12 87 05 08 04 00 DE 00 00 00 00 00 \
            CA D4 44 05 35 01 A8 0C 0A 18 07 02 11 10 08 10 \
            07 10 09 10 C1 1E 10 08 10 07 0A EF 19 09 8D 01 \
-           33
+           46
 
 [RC6-M-20n]
 PID=00 20
@@ -1240,6 +1240,46 @@ FixedData=80 00
 DeviceTranslator=Translator(0,3,1) Translator(1,8,8) Translator(2,4,4)
 CmdParms=OBC=0
 CmdTranslator=Translator()
+
+[RC6-M-24n]
+PID=00 40
+VariantName=short_8
+Notes=This protocol supports any RC6-M-24 variant where the toggle bit doesn't \
+      actually toggle (in decodes the T value is always the same).\n\n\
+      The only examples we have seen are for the Replay device.\n\
+      In those examples M is always 6, Device is always 1, Sub Device is the unit \
+      number, and T is always 0.  The OBC range is limited in Replay, so the \
+      Replay(simple) protocol (which is smaller than RC6-M-24n) will do everything \
+      this one will.
+DevParms=M=6,Device=1,Sub Device,T
+FixedData=80 00 00 00 00 00 00
+DeviceTranslator=Translator(0,1,2,2) Translator(0,1,3,2,comp) \
+                 Translator(0,1,4,1) Translator(0,1,5,1,comp) \
+                 Translator(0,1,6,0) Translator(0,1,7,0,comp) \
+                 Translator(1,1,12,7) Translator(1,1,13,7,comp) \
+                 Translator(1,1,14,6) Translator(1,1,15,6,comp) \
+                 Translator(1,1,16,5) Translator(1,1,17,5,comp) \
+                 Translator(1,1,18,4) Translator(1,1,19,4,comp) \
+                 Translator(1,1,20,3) Translator(1,1,21,3,comp) \
+                 Translator(1,1,22,2) Translator(1,1,23,2,comp) \
+                 Translator(1,1,24,1) Translator(1,1,25,1,comp) \
+                 Translator(1,1,26,0) Translator(1,1,27,0,comp) \
+                 Translator(2,1,28,7) Translator(2,1,29,7,comp) \
+                 Translator(2,1,30,6) Translator(2,1,31,6,comp) \
+                 Translator(2,1,23,5) Translator(2,1,33,5,comp) \
+                 Translator(2,1,34,4) Translator(2,1,35,4,comp) \
+                 Translator(2,1,36,3) Translator(2,1,37,3,comp) \
+                 Translator(2,1,38,2) Translator(2,1,39,2,comp) \
+                 Translator(2,1,44,1) Translator(2,1,45,1,comp) \
+                 Translator(2,1,46,0) Translator(2,1,47,0,comp) \
+                 Translator(3,1,08,0) Translator(3,1,10,0,comp) \
+                 Translator(3,1,09,0) Translator(3,1,11,0,comp)
+CmdParms=OBC=0
+CmdTranslator=Translator()
+Code.S3C80=47 93 71 8B 12 87 05 08 04 00 DE 00 00 00 00 00 \
+           CA D4 44 05 35 01 A8 0C 0A 18 08 02 11 10 09 10 \
+           08 10 0A 10 C1 1E 10 09 10 08 0A EF 19 0A 8D 01 \
+           46
 
 [RCA]
 PID=00 AF
@@ -1327,17 +1367,39 @@ Code.S3C80=46 A6 11 8B 0F C5 C1 40 05 06 00 5A 0A CF 00 5A \
 Code.740=0D 1F 11 80 0C E0 A2 01 06 05 06 08 2B 0B EA 86 \
          B0 17 5A 02 CF 5D 4C 00 FF
 
+[ReplayTV (Simple)]
+PID=00 40
+VariantName=short_6
+CmdTranslator=Translator()
+CmdParms=OBC:6=0
+Notes=This protocol is actually RC6-6-24 with the toggle bit locked at 0 (rather than toggling \
+      and the OBC limited to the range 0 to 63 instead of the full 0 to 255.\n\n\
+      If you need a Replay signal with OBC greater than 63, use the RC6-M-24n protocol \
+      instead.
+DevParms=Device Code=1,Unit Code=0
+DeviceTranslator=Translator(0,1,12,7) Translator(0,1,13,7,comp) \
+                 Translator(0,1,14,6) Translator(0,1,15,6,comp) \
+                 Translator(0,1,16,5) Translator(0,1,17,5,comp) \
+                 Translator(0,1,18,4) Translator(0,1,19,4,comp) \
+                 Translator(0,1,20,3) Translator(0,1,21,3,comp) \
+                 Translator(0,1,22,2) Translator(0,1,23,2,comp) \
+                 Translator(0,1,24,1) Translator(0,1,25,1,comp) \
+                 Translator(0,1,26,0) Translator(0,1,27,0,comp) \
+                 Translator(1,1,28,7) Translator(1,1,29,7,comp) \
+                 Translator(1,1,30,6) Translator(1,1,31,6,comp) \
+                 Translator(1,1,32,5) Translator(1,1,33,5,comp) \
+                 Translator(1,1,34,4) Translator(1,1,35,4,comp) \
+                 Translator(1,1,36,3) Translator(1,1,37,3,comp) \
+                 Translator(1,1,38,2) Translator(1,1,39,2,comp) \
+                 Translator(1,1,40,1) Translator(1,1,41,1,comp) \
+                 Translator(1,1,42,0) Translator(1,1,43,0,comp)
+FixedData=a9 35 55 65 55 55 00
+Code.S3C80=47 93 71 8B 12 87 05 08 04 00 DE 00 00 00 00 00 \
+           CA D4 44 05 35 01 A8 0C 0A 02 11 10 09 10 0A 10 \
+           C1 1E 10 09 0A F3 19 0A 8D 01 46
+
 #[ReplayTV (Simple)]
 #PID=00 40
-#CmdTranslator=Translator()
-#CmdParms=OBC=0
-#Notes=hacked version
-#DevParms=Device Code=1,Unit Code=0
-#DeviceTranslator=
-#FixedData=a9 35 55 65 55 55 00
-#Code.S3C80=47 93 71 8B 12 87 05 08 04 00 DE 00 00 00 00 00 \
-#           CA D4 44 05 35 01 A8 0C 0A 02 11 10 09 10 0A 10 \
-#           C1 1E 10 09 0A F3 19 0A 8D 01 46
 #Code.740=0C 1C 31 A9 60 20 DB 00 A2 16 A0 02 22 44 A5 5D \
 #         85 56 20 6C 01 A2 1B A0 02 22 44 A9 20 20 DB 00 \
 #         A5 5E 20 71 01 A5 5F 20 71 01 A5 60 20 71 01 A2 \
